[gd_scene load_steps=2 format=3 uid="uid://srx4qykcm41m"]

[ext_resource type="Script" path="res://Scenes/Prototypes/auto pineapple/prototype_auto_pineapple.gd" id="1_3d0uu"]

[node name="prototype_auto_pineapple" type="Control" node_paths=PackedStringArray("label", "button", "timer")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_3d0uu")
label = NodePath("Label")
button = NodePath("Button")
timer = NodePath("Timer")

[node name="Button" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -160.0
offset_top = -40.0
offset_right = 160.0
offset_bottom = 40.0
grow_horizontal = 2
grow_vertical = 2
text = "start auto pineapple"

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 80.0
grow_horizontal = 2
theme_type_variation = &"HeaderLarge"
text = "Pineapples: <value>"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Timer" type="Timer" parent="."]

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
